Stop dropdowns overflowing off the viewport
This overrides a `white-space: nowrap` rule added by Bootstrap.

Fixes #13.

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,8 @@ emits a confirmAlert({customUI: ...}) instead.
     /* Appear on top of confirmAlert()s */
     z-index: 1031;
 }
+
+.dropdown-menu > li > a {
+    /* Make dropdown contents wrap to avoid going off-screen */
+    white-space: normal;
+}
